K8S/service-a-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a-deployment
spec:
  selector:
    matchLabels:
      app: service-a
  template:
    metadata:
      labels:
        app: service-a
    spec:
      containers:
        - name: service-a
          image: idoassignment202404acr.azurecr.io/service-a:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /service-a
              port: 8080
          readinessProbe:
            httpGet:
              path: /service-a
              port: 8080
