K8S/service-b-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b-deployment
spec:
  selector:
    matchLabels:
      app: service-b
  template:
    metadata:
      labels:
        app: service-b
    spec:
      containers:
        - name: service-b
          image: idoassignment202404acr.azurecr.io/service-b:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /service-b
              port: 8080
          readinessProbe:
            httpGet:
              path: /service-b
              port: 8080
