K8S/network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-service-traffic
spec:
  podSelector:
    matchLabels:
      app: service-a
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchExpressions:
        - key: app
          operator: NotIn
          values:
          - service-b
